build: setup mockito